# tinygrad

./: .env  .gitignore  pyproject.toml  z_practive.ipynb
_tinyGPT/: autogen.py  runtime.py  shape.py  tinygrad.py
examples/: llama3.py
nn/: index.html
search/: search_index.json
temp/: net.dot  net.uops.dot  tut.py  tut_shapetracker.ipynb  tutorial_notebook.ipynb
test/: test_nn.py
