[tool.poetry]
name = "tinygrad"
version = "0.8.0"
description = "You like pytorch? You like micrograd? You love tinygrad! <3"
authors = ["George Hotz"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/geohot/tinygrad"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]

[tool.poetry.dependencies]
python = ">=3.10"
numpy = "*"
tqdm = "*"
pyobjc-framework-Metal = { version = "*", markers = "sys_platform == 'darwin'" }
pyobjc-framework-libdispatch = { version = "*", markers = "sys_platform == 'darwin'" }
llvmlite = { version = "*", optional = true }
unicorn = { version = "*", optional = true }
# triton-nightly = { version = ">=2.1.0", optional = true }

[tool.poetry.extras]
llvm = ["llvmlite"]
arm = ["unicorn"]
triton = ["triton-nightly"]
cuda = ["pycuda"]

[tool.poetry.group.linting.dependencies]
pylint = "*"
mypy = "*"
typing-extensions = "*"
pre-commit = "*"
ruff = "*"
types-tqdm = "*"

[tool.poetry.group.testing.dependencies]
torch = "*"
pillow = "*"
pytest = "*"
pytest-xdist = "*"
onnx = "1.15.0"
onnx2torch = "*"
opencv-python = "*"
tabulate = "*"
safetensors = "*"
transformers = "*"
sentencepiece = "*"
tiktoken = "*"
librosa = "*"
networkx = "*"
hypothesis = "*"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
plotly = "^5.19.0"
nbformat = "^5.9.2"
ipython = "^8.22.1"
safetensors = "^0.4.2"
sentencepiece = "^0.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
preview = true # Enable preview features.
line-length = 119
per-file-ignores = {"__init__.py" = ["F401"]}
